Fixes large cover images on mobile

--- a/wp-content/themes/plusplus2019/style.css
+++ b/wp-content/themes/plusplus2019/style.css
@@ -710,6 +710,12 @@ footer li {
   margin: 0 0 0.4em 0;
 }
 
+.fit-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /*magic*/
+}
+
 .no-grid {
   display: block;
 }
